# wordsmith

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: assets.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs
src/builders/: html.rs  mod.rs  pdf.rs
src/commands/: build.rs  init.rs  mod.rs
src/components/: assets_path.rs  break_tag.rs  custom_block_tag.rs  mod.rs  themes_path.rs
stubs/: ws.yaml
stubs/content/: 001-introduction.md  002-requirements.md  003-how-to-create-content.md  004-troubleshoot.md  005-references.md  006-more.md  007-random.md
stubs/themes/: __base-head.html  dark.html  light.html
stubs/themes/css/: dark-github-gist.css  light-github-gist.css  reset.css
